--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>hello meded</h1>
+    <h1>мама я на уроке</a></h1>
+    <img width="500px" src="./photo_2025-05-18_15-42-16.jpg" alt="">
 </body>
 </html>
